Testing travis with minishell_test

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = libft
 	url = https://github.com/HappyTramp/libft
 	branch = minishell
+
+[submodule "minishell_test"]
+	path = minishell_test
+	url = https://github.com/HappyTramp/minishell_test
+	branch = master
