--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: c
 
-script: make all
+git:
+  submodules: true
+
+python:
+  - "3.5"
+
+script: make all && cd minishell_test && python3 main.py
