--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+os: linux
+
 language: c
 
 git:
@@ -6,4 +8,7 @@ git:
 python:
   - "3.5"
 
-script: make all && cd minishell_test && python3 main.py
+env:
+  - LANG=en_US.UTF-8
+
+script: make all && cd minishell_test && python3 main.py; cat result.log
