--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "libft"]
 	path = libft
-	url = https://github.com/HappyTramp/libft
+	url = https://github.com/cacharle/libft
 	branch = minishell
 
 [submodule "minishell_test"]
 	path = minishell_test
-	url = https://github.com/HappyTramp/minishell_test
+	url = https://github.com/cacharle/minishell_test
 	branch = master
